Info Button correct colour and size, aligned with text

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1010,6 +1010,7 @@ a.menu-choice__label:active {
 
 .definition-title__tooltip-icon {
   display: inline-block;
+  margin-left: -12px;
 }
 
 .definition-title__tooltip-icon > img {
